sort.baseball.NaiveBaseball.scala.error
Compilation error:
NaiveBaseball:5: error: '(' expected but identifier found.
  if getCouleurJoueur(base,position)<base { //Si on doit passer la base zéro
     ^NaiveBaseball:15: error: illegal start of simple expression
}
^